[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = ["Unai"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.3"
langchain-ollama = "^0.2.0"
pypdf = "^5.0.1"
langchain-community = "^0.3.2"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
